// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`findMissDomAndClean should remove none radio field when found 1`] = `
Object {
  "test1": Object {
    "name": "test",
    "ref": Object {},
  },
}
`;

exports[`findMissDomAndClean should remove options completely if option found and no option left 1`] = `Object {}`;

exports[`findMissDomAndClean should work for radio type input 1`] = `
Object {
  "test1": Object {
    "name": "test",
    "ref": Object {
      "type": "radio",
    },
  },
}
`;
